--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,22 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>Ironjacamar Oracle Reauth</name>
   <description>Implements Reauth support for Ironjacamar</description>
+  <repositories>
+    <repository>
+      <id>jboss-eap-repository</id>
+      <name>JBoss EAP Maven Repository</name>
+      <url>http://maven.repository.redhat.com/techpreview/all/</url>
+      <layout>default</layout>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+        <updatePolicy>never</updatePolicy>
+        </snapshots>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.jboss.ironjacamar</groupId>
